--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno/'
+title: Fedor Bobylev
+description: 'Geek. Software developer. '
+url: 'http://localhost:4000'
+baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Fedor Bobylev'
+  email: fedorbobylev@gmail.com
+  twitter_username: techblogogy
+  facebook_username: fedir.bobylev
+  github_username: techblogogy
+  linkedin_username: fedor-bobylev-3a1437a3
+  tumblr: techblogogy
 
 defaults:
   -
