--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Fedor Bobylev
-description: 'Geek. Software developer. '
+description: 'Geek. Software developer. Student'
 url: 'http://localhost:4000'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
